--- a/views/kidsPage.ejs
+++ b/views/kidsPage.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <%- include('./partials/navbar') %>
-    <div id="app"></div>
+    <div id="kids"></div>
     <script src="/main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
