added a few components

--- a/client/src/pages/Landing/styles.css
+++ b/client/src/pages/Landing/styles.css
@@ -5,7 +5,11 @@
   font-family: "Kanit", sans-serif;
 }
 
-p {
+.container {
+  width: 100%;
+  height: auto;
+}
+.container p {
   display: inline-block;
   margin-left: 7%;
   margin-right: 7%;
@@ -13,8 +17,7 @@ p {
   font-weight: bold;
   text-transform: uppercase;
 }
-
-.brand-intro {
+.container .brand-intro {
   border-top: 1.5px solid #0b0909;
   border-bottom: 1.5px solid #0b0909;
   border-left: 1px solid #0b0909;
@@ -24,12 +27,7 @@ p {
   display: -ms-flexbox;
   display: flex;
 }
-.brand-intro img {
-  width: 25%;
-  height: 502px;
-}
-
-.text-intro {
+.container .text-intro {
   margin-top: 10px;
   margin-bottom: 10px;
   display: -webkit-box;
@@ -42,21 +40,19 @@ p {
   font-size: 90px;
   color: #0b0909;
 }
-
-.text-content {
+.container .text-content {
   max-width: 1680px;
   min-height: 600px;
   background-color: #d6d6d6;
   font-size: 1.2rem;
 }
-.text-content .description {
+.container .text-content .description {
   margin-top: 45px;
   margin-bottom: 45px;
   text-align: center;
   font-size: 1.3rem;
 }
-
-.legit {
+.container .legit {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -72,20 +68,20 @@ p {
   position: relative;
   color: #44444c;
 }
-.legit h1 {
+.container .legit h1 {
   position: absolute;
   font-size: 5em;
   top: 43px;
   left: 1em;
   line-height: 70px;
 }
-.legit h2 {
+.container .legit h2 {
   position: absolute;
   bottom: 9%;
   right: 7%;
   font-size: 2em;
 }
-.legit p {
+.container .legit p {
   position: absolute;
   font-size: 2em;
   background-color: #d6d6d6;
@@ -93,23 +89,23 @@ p {
   padding: 10px;
   text-transform: uppercase;
 }
-.legit .item-1 {
+.container .legit .item-1 {
   top: 37%;
   left: 51%;
 }
-.legit .item-2 {
+.container .legit .item-2 {
   top: 30%;
   left: 22%;
 }
-.legit .item-3 {
+.container .legit .item-3 {
   top: 60%;
   left: 37%;
 }
-.legit .background {
+.container .legit .background {
   width: 100%;
   height: auto;
 }
-.legit .example-img {
+.container .legit .example-img {
   position: absolute;
   top: 20%;
   left: 19%;
@@ -118,9 +114,4 @@ p {
   -webkit-transform: rotate(-20deg);
       -ms-transform: rotate(-20deg);
           transform: rotate(-20deg);
-}
-
-.container {
-  width: 100%;
-  height: auto;
 }
