--- a/client/src/pages/Landing/styles.scss
+++ b/client/src/pages/Landing/styles.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit&display=swap");
-@import "../../../Styles/global-variables";
+@import "../../Styles/global-variables";
 
 * {
   margin: 0px;
@@ -7,116 +7,111 @@
   font-family: "Kanit", sans-serif;
 }
 
-p {
-  display: inline-block;
-  margin-left: 7%;
-  margin-right: 7%;
-  font-size: 100px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.brand-intro {
-  border-top: 1.5px solid $primary;
-  border-bottom: 1.5px solid $primary;
-  border-left: 1px solid $primary;
-  width: 100%;
-  height: auto;
-  display: flex;
-
-  img {
-    width: 25%;
-    height: 502px;
-  }
-}
-
-.text-intro {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  font-size: 90px;
-  color: $primary;
-}
-
-.text-content {
-  max-width: 1680px;
-  min-height: 600px;
-  background-color: $white;
-  font-size: 1.2rem;
-
-  .description {
-    margin-top: 45px;
-    margin-bottom: 45px;
-    text-align: center;
-    font-size: 1.3rem;
-  }
-}
-
-.legit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1em;
-  max-width: 100%;
-  height: auto;
-  position: relative;
-  color: $secondary;
-
-  h1 {
-    position: absolute;
-    font-size: 5em;
-    top: 43px;
-    left: 1em;
-    line-height: 70px;
-  }
-
-  h2 {
-    position: absolute;
-    bottom: 9%;
-    right: 7%;
-    font-size: 2em;
-  }
-  p {
-    position: absolute;
-    font-size: 2em;
-    background-color: $white;
-    border: 3px solid $primary;
-    padding: 10px;
-    text-transform: uppercase;
-  }
-
-  .item-1 {
-    top: 37%;
-    left: 51%;
-  }
-
-  .item-2 {
-    top: 30%;
-    left: 22%;
-  }
-
-  .item-3 {
-    top: 60%;
-    left: 37%;
-  }
-
-  .background {
-    width: 100%;
-    height: auto;
-  }
-  .example-img {
-    position: absolute;
-    top: 20%;
-    left: 19%;
-    width: 50%;
-    height: auto;
-    transform: rotate(-20deg);
-  }
-}
-
 .container {
   width: 100%;
   height: auto;
+
+  p {
+    display: inline-block;
+    margin-left: 7%;
+    margin-right: 7%;
+    font-size: 100px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  .brand-intro {
+    border-top: 1.5px solid $primary;
+    border-bottom: 1.5px solid $primary;
+    border-left: 1px solid $primary;
+    width: 100%;
+    height: auto;
+    display: flex;
+  }
+
+  .text-intro {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 90px;
+    color: $primary;
+  }
+
+  .text-content {
+    max-width: 1680px;
+    min-height: 600px;
+    background-color: $white;
+    font-size: 1.2rem;
+
+    .description {
+      margin-top: 45px;
+      margin-bottom: 45px;
+      text-align: center;
+      font-size: 1.3rem;
+    }
+  }
+
+  .legit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1em;
+    max-width: 100%;
+    height: auto;
+    position: relative;
+    color: $secondary;
+
+    h1 {
+      position: absolute;
+      font-size: 5em;
+      top: 43px;
+      left: 1em;
+      line-height: 70px;
+    }
+
+    h2 {
+      position: absolute;
+      bottom: 9%;
+      right: 7%;
+      font-size: 2em;
+    }
+    p {
+      position: absolute;
+      font-size: 2em;
+      background-color: $white;
+      border: 3px solid $primary;
+      padding: 10px;
+      text-transform: uppercase;
+    }
+
+    .item-1 {
+      top: 37%;
+      left: 51%;
+    }
+
+    .item-2 {
+      top: 30%;
+      left: 22%;
+    }
+
+    .item-3 {
+      top: 60%;
+      left: 37%;
+    }
+
+    .background {
+      width: 100%;
+      height: auto;
+    }
+    .example-img {
+      position: absolute;
+      top: 20%;
+      left: 19%;
+      width: 50%;
+      height: auto;
+      transform: rotate(-20deg);
+    }
+  }
 }
