--- a/client/src/pages/Category/styles.css
+++ b/client/src/pages/Category/styles.css
@@ -7,19 +7,19 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   border-bottom: 2px solid #0b0909;
 }
 .humans-container .head p {
+  margin-left: 4%;
+  width: 30%;
   font-size: 30px;
 }
 
 .form__group {
+  margin-left: 26%;
   position: relative;
   padding: 15px 0 0;
   width: 30%;
@@ -97,4 +97,77 @@
   font-size: 1rem;
   color: #0b0909;
   font-weight: 700;
+}
+
+.card-skeleton {
+  display: inline-block;
+  width: 384px;
+  height: 660px;
+  border: 2px solid #0b0909;
+  margin: 1em;
+}
+.card-skeleton .top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 15%;
+  border-bottom: 2px solid #0b0909;
+}
+.card-skeleton .top span {
+  height: 30px;
+  width: 90%;
+  margin-left: 10px;
+}
+.card-skeleton .middle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 70%;
+}
+.card-skeleton .middle span {
+  margin-left: 10px;
+  height: 95%;
+  width: 90%;
+}
+.card-skeleton .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-top: 2px solid #0b0909;
+}
+.card-skeleton .bottom span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90%;
+  height: 100px;
+  margin-top: 6.5px;
 }
