--- a/client/src/pages/Category/styles.scss
+++ b/client/src/pages/Category/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../Styles/global-variables";
+@import "../../Styles/global-variables";
 
 .humans-container {
   width: 100%;
@@ -7,21 +7,22 @@
   .head {
     height: 100px;
     display: flex;
-    justify-content: space-evenly;
+
     align-items: center;
     border-bottom: 2px solid $primary;
 
     p {
+      margin-left: 4%;
+      width: 30%;
       font-size: 30px;
     }
   }
 }
 
 .form__group {
+  margin-left: 26%;
   position: relative;
-
   padding: 15px 0 0;
-
   width: 30%;
 }
 
@@ -70,4 +71,56 @@
   border-width: 3px;
   border-image: linear-gradient(to right, $gray, $white);
   border-image-slice: 1;
+}
+
+.card-skeleton {
+  display: inline-block;
+  width: 384px;
+  height: 660px;
+  border: 2px solid $primary;
+  margin: 1em;
+
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 15%;
+    border-bottom: 2px solid $primary;
+
+    span {
+      height: 30px;
+      width: 90%;
+      margin-left: 10px;
+    }
+  }
+
+  .middle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70%;
+
+    span {
+      margin-left: 10px;
+      height: 95%;
+      width: 90%;
+    }
+  }
+
+  .bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 2px solid $primary;
+
+    span {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 90%;
+      height: 100px;
+      margin-top: 6.5px;
+    }
+  }
 }
