--- a/client/src/pages/Landing/styles.css
+++ b/client/src/pages/Landing/styles.css
@@ -27,6 +27,41 @@
   display: -ms-flexbox;
   display: flex;
 }
+.container .brand-intro .tc-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25%;
+  height: 100%;
+  position: relative;
+}
+.container .brand-intro .tc-container:hover .main-img {
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+}
+.container .brand-intro .tc-container:hover .top-img {
+  -webkit-transition: 200ms ease-in-out;
+  -o-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+  opacity: 0.6;
+}
+.container .brand-intro .tc-container .main-img {
+  width: 100%;
+  height: 502px;
+  border-right: 1px solid rgb(0, 0, 0);
+}
+.container .brand-intro .tc-container .top-img {
+  width: 50%;
+  height: auto;
+  position: absolute;
+  opacity: 0;
+}
 .container .text-intro {
   margin-top: 10px;
   margin-bottom: 10px;
