--- a/client/src/pages/Landing/styles.scss
+++ b/client/src/pages/Landing/styles.scss
@@ -27,6 +27,39 @@
     width: 100%;
     height: auto;
     display: flex;
+
+    .tc-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 25%;
+      height: 100%;
+      position: relative;
+
+      &:hover {
+        .main-img {
+          filter: blur(4px);
+        }
+
+        .top-img {
+          transition: 200ms ease-in-out;
+          opacity: 0.6;
+        }
+      }
+
+      .main-img {
+        width: 100%;
+        height: 502px;
+        border-right: 1px solid rgb(0, 0, 0);
+      }
+
+      .top-img {
+        width: 50%;
+        height: auto;
+        position: absolute;
+        opacity: 0;
+      }
+    }
   }
 
   .text-intro {
