--- a/client/src/pages/Products/styles.css
+++ b/client/src/pages/Products/styles.css
@@ -1,3 +1,6 @@
+.card-page {
+  min-height: 800px;
+}
 .card-page .line-back {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -7,6 +10,14 @@
           align-items: center;
   width: 100%;
   height: 100px;
+}
+.card-page .line-back :active {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 200ms;
+  -o-transition: 200ms;
+  transition: 200ms;
 }
 .card-page .line-back button {
   cursor: pointer;
@@ -124,6 +135,9 @@
 .card-page .sneaker-content .mat-images .clone-image img {
   width: 100%;
   height: 100%;
+  -webkit-transition: 200ms;
+  -o-transition: 200ms;
+  transition: 200ms;
 }
 .card-page .sneaker-content .mat-images .clone-image img:hover {
   scale: 1.2;
@@ -153,14 +167,41 @@
   border-bottom: 1px solid #8c8c8c;
   padding: 24px 0;
 }
-.card-page .sneaker-content .right .price-line button {
-  margin-left: 40%;
+.card-page .sneaker-content .right .price-line .heart {
+  margin-left: 35%;
+  width: 10%;
+  height: 50;
+  border: none;
+  background-color: transparent;
+}
+.card-page .sneaker-content .right .price-line .heart :active {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: 200ms;
+  -o-transition: 200ms;
+  transition: 200ms;
+}
+.card-page .sneaker-content .right .price-line .heart img {
+  width: 30px;
+  height: 30px;
+}
+.card-page .sneaker-content .right .price-line .buy {
+  margin-left: 2%;
   width: 45%;
   height: 60px;
   border: none;
   color: #d6d6d6;
   background-color: #44444c;
   cursor: pointer;
+}
+.card-page .sneaker-content .right .price-line .buy :active {
+  -webkit-transform: scale(1.6);
+      -ms-transform: scale(1.6);
+          transform: scale(1.6);
+  -webkit-transition: 100ms;
+  -o-transition: 100ms;
+  transition: 100ms;
 }
 .card-page .sneaker-content .right .description {
   padding-top: 30px;
