--- a/client/src/pages/Products/styles.scss
+++ b/client/src/pages/Products/styles.scss
@@ -1,11 +1,18 @@
 @import "../../Styles/global-variables";
 
 .card-page {
+  min-height: 800px;
+
   .line-back {
     display: flex;
     align-items: center;
     width: 100%;
     height: 100px;
+
+    :active {
+      transform: scale(1.1);
+      transition: 200ms;
+    }
 
     button {
       cursor: pointer;
@@ -97,6 +104,7 @@
         img {
           width: 100%;
           height: 100%;
+          transition: 200ms;
 
           &:hover {
             scale: 1.2;
@@ -126,14 +134,38 @@
         border-bottom: 1px solid $gray;
         padding: 24px 0;
 
-        button {
-          margin-left: 40%;
+        .heart {
+          margin-left: 35%;
+          width: 10%;
+          height: 50;
+          border: none;
+          background-color: transparent;
+
+          :active {
+            transform: scale(1.2);
+            transition: 200ms;
+          }
+
+          img {
+            width: 30px;
+            height: 30px;
+          }
+        }
+
+        .buy {
+          margin-left: 2%;
           width: 45%;
           height: 60px;
           border: none;
           color: $white;
           background-color: $secondary;
           cursor: pointer;
+
+          :active {
+            transform: scale(1.6);
+
+            transition: 100ms;
+          }
         }
       }
 
