--- a/client/src/components/routes/styles.css
+++ b/client/src/components/routes/styles.css
@@ -20,11 +20,11 @@ nav a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   list-style-type: none;
 }
 nav a.active p::before {
@@ -107,11 +107,11 @@ footer .join {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   top: 172px;
   right: 0px;
   width: 40%;
@@ -123,84 +123,6 @@ footer .join h2 {
   padding-left: 20%;
   font-size: 2.5em;
 }
-footer .join .form__group {
-  position: relative;
-  margin-left: 20%;
-  padding: 15px 0 0;
-  margin-top: 10px;
-  width: 50%;
-}
-footer .join .form__field {
-  width: 100%;
-  border: 0;
-  border-bottom: 2px solid #8c8c8c;
-  outline: 0;
-  font-size: 1.3rem;
-  color: #0b0909;
-  padding: 7px 0;
-  background: transparent;
-  -webkit-transition: border-color 0.2s;
-  -o-transition: border-color 0.2s;
-  transition: border-color 0.2s;
-}
-footer .join .form__field::-webkit-input-placeholder {
-  color: transparent;
-}
-footer .join .form__field::-moz-placeholder {
-  color: transparent;
-}
-footer .join .form__field:-ms-input-placeholder {
-  color: transparent;
-}
-footer .join .form__field::-ms-input-placeholder {
-  color: transparent;
-}
-footer .join .form__field::placeholder {
-  color: transparent;
-}
-footer .join .form__field:-moz-placeholder-shown ~ .form__label {
-  font-size: 1.3rem;
-  cursor: text;
-  top: 20px;
-}
-footer .join .form__field:-ms-input-placeholder ~ .form__label {
-  font-size: 1.3rem;
-  cursor: text;
-  top: 20px;
-}
-footer .join .form__field:placeholder-shown ~ .form__label {
-  font-size: 1.3rem;
-  cursor: text;
-  top: 20px;
-}
-footer .join .form__label {
-  position: absolute;
-  top: 0;
-  display: block;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-  font-size: 1rem;
-  color: #8c8c8c;
-}
-footer .join .form__field:focus {
-  font-weight: 700;
-  border-width: 3px;
-  -o-border-image: -o-linear-gradient(left, #8c8c8c, #d6d6d6);
-     border-image: -webkit-gradient(linear, left top, right top, from(#8c8c8c), to(#d6d6d6));
-     border-image: linear-gradient(to right, #8c8c8c, #d6d6d6);
-  border-image-slice: 1;
-}
-footer .join .form__field:focus ~ .form__label {
-  top: 0;
-  display: block;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-  font-size: 1rem;
-  color: #0b0909;
-  font-weight: 700;
-}
 
 .bottom {
   width: 100%;
@@ -211,8 +133,8 @@ footer .join .form__field:focus ~ .form__label {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-bottom: 25px;
 }
 .bottom div span {
@@ -225,8 +147,8 @@ footer .join .form__field:focus ~ .form__label {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
 }
 .bottom .links h3 {
   font-size: 20px;
