--- a/client/src/components/forms/AuthInput/styles.css
+++ b/client/src/components/forms/AuthInput/styles.css
@@ -1,81 +1,21 @@
-.form__group {
-  position: relative;
-  margin-left: 20%;
-  padding: 15px 0 0;
-  margin-top: 10px;
-  width: 40%;
+.auth-input {
+  width: 30vw;
+  height: 40px;
+  border-radius: 3px;
+  border: 2px solid #0b0909;
+  background-color: #d6d6d6;
+  -webkit-box-shadow: 4px 4px #007f5c;
+          box-shadow: 4px 4px #007f5c;
+  font-size: 15px;
+  font-weight: 600;
+  color: #1f4a6f;
+  padding: 5px 10px;
+  outline: none;
+  margin: 1em;
 }
-.form__group .form__field {
-  width: 100%;
-  border: 0;
-  border-bottom: 2px solid #8c8c8c;
-  outline: 0;
-  font-size: 1.3rem;
-  color: #0b0909;
-  padding: 7px 0;
-  background: transparent;
-  -webkit-transition: border-color 0.2s;
-  -o-transition: border-color 0.2s;
-  transition: border-color 0.2s;
-}
-.form__group .form__field::-webkit-input-placeholder {
-  color: transparent;
-}
-.form__group .form__field::-moz-placeholder {
-  color: transparent;
-}
-.form__group .form__field:-ms-input-placeholder {
-  color: transparent;
-}
-.form__group .form__field::-ms-input-placeholder {
-  color: transparent;
-}
-.form__group .form__field::placeholder {
-  color: transparent;
-}
-.form__group .form__field:-moz-placeholder-shown ~ .form__label {
-  font-size: 1.3rem;
-  cursor: text;
-  top: 20px;
-}
-.form__group .form__field:-ms-input-placeholder ~ .form__label {
-  font-size: 1.3rem;
-  cursor: text;
-  top: 20px;
-}
-.form__group .form__field:placeholder-shown ~ .form__label {
-  font-size: 1.3rem;
-  cursor: text;
-  top: 20px;
-}
-.form__group .form__label {
-  position: absolute;
-  top: 0;
-  display: block;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-  font-size: 1rem;
-  color: #8c8c8c;
-}
-.form__group .form__field:focus {
-  font-weight: 700;
-  border-width: 3px;
-  -o-border-image: -o-linear-gradient(left, #8c8c8c, #d6d6d6);
-     border-image: -webkit-gradient(linear, left top, right top, from(#8c8c8c), to(#d6d6d6));
-     border-image: linear-gradient(to right, #8c8c8c, #d6d6d6);
-  border-image-slice: 1;
-}
-.form__group .form__field:focus ~ .form__label {
-  top: 0;
-  display: block;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-  font-size: 1rem;
-  color: #0b0909;
-  font-weight: 700;
-}
-.form__group p {
+
+.message {
+  width: 300px;
   color: #ff3333;
+  text-align: left;
 }
