--- a/client/src/components/routes/styles.css
+++ b/client/src/components/routes/styles.css
@@ -161,3 +161,85 @@ footer .join h2 {
   margin: 0 1em;
   color: #0b0909;
 }
+
+.left {
+  width: 25vw;
+  height: 100vh;
+}
+.left .links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  height: 25vh;
+}
+.left .links .avatar {
+  width: 50px;
+  height: 50px;
+  border: 2px solid #0b0909;
+  border-radius: 50px;
+  margin-bottom: 20px;
+}
+.left .links .avatar .image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+}
+.left .links a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 41%;
+  height: 33.33%;
+  margin: 0.5em;
+  color: #0b0909;
+}
+.left .links a img {
+  margin-right: 5%;
+  width: 20px;
+  height: 20px;
+  -webkit-transform: scaleX(-1);
+  -ms-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+.left .links span {
+  border-top: 2px solid #44444c;
+  width: 80%;
+  opacity: 0.2;
+}
+.left .links button {
+  margin: 0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 33.33%;
+  max-width: 28%;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  cursor: pointer;
+}
+.left .links button img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  margin-right: 5%;
+}
