--- a/client/src/components/routes/styles.scss
+++ b/client/src/components/routes/styles.scss
@@ -157,3 +157,72 @@ footer {
     }
   }
 }
+
+.left {
+  width: 25vw;
+  height: 100vh;
+
+  .links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 25vh;
+
+    .avatar {
+      width: 50px;
+      height: 50px;
+      border: 2px solid $primary;
+      border-radius: 50px;
+      margin-bottom: 20px;
+
+      .image {
+        width: 50px;
+        height: 50px;
+        border-radius: 50px;
+      }
+    }
+
+    a {
+      display: flex;
+      align-items: center;
+      width: 41%;
+      height: 33.33%;
+      margin: 0.5em;
+      color: $primary;
+
+      img {
+        margin-right: 5%;
+        width: 20px;
+        height: 20px;
+        transform: scaleX(-1);
+      }
+    }
+
+    span {
+      border-top: 2px solid $secondary;
+      width: 80%;
+      opacity: 0.2;
+    }
+
+    button {
+      margin: 0.5em;
+      display: flex;
+      align-items: center;
+      height: 33.33%;
+      max-width: 28%;
+      border: none;
+      background-color: transparent;
+      font-size: 16px;
+      cursor: pointer;
+
+      img {
+        display: flex;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+        margin-right: 5%;
+      }
+    }
+  }
+}
