--- a/client/src/pages/Account/styles.scss
+++ b/client/src/pages/Account/styles.scss
@@ -2,10 +2,7 @@
 @import "../../Styles/mixins";
 
 .account-container {
-  width: 100vw;
-  height: 140vh;
-  margin: 5% 3%;
-  display: flex;
+  @include account-container();
 
   .middle {
     .info-block {
@@ -38,7 +35,7 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #2b2b2b;
+          background-color: $silver;
           transition: 300ms ease-in-out;
         }
 
@@ -91,7 +88,7 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #2b2b2b;
+          background-color: $silver;
           transition: 300ms ease-in-out;
         }
 
@@ -99,6 +96,31 @@
           transform: translateY(3px);
           transition: 100ms ease-in-out;
         }
+      }
+    }
+  }
+}
+
+.orders-container {
+  @include account-container();
+  height: 53vh;
+
+  .orders-block {
+    width: 70vw;
+    margin-left: 5vw;
+
+    .orders {
+      display: flex;
+      align-items: center;
+
+      width: 50vw;
+      height: 10vh;
+      border: 2px solid $primary;
+      background-color: $white;
+
+      ul {
+        list-style: none;
+        margin: 0 4%;
       }
     }
   }
