--- a/client/src/pages/Products/styles.css
+++ b/client/src/pages/Products/styles.css
@@ -192,13 +192,19 @@
   height: 60px;
   border: none;
   color: #d6d6d6;
-  background-color: #44444c;
+  background-color: #0b0909;
   cursor: pointer;
 }
-.card-page .sneaker-content .right .price-line .buy :active {
-  -webkit-transform: scale(1.6);
-      -ms-transform: scale(1.6);
-          transform: scale(1.6);
+.card-page .sneaker-content .right .price-line .buy:hover {
+  background-color: #2b2b2b;
+  -webkit-transition: 300ms ease-in-out;
+  -o-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+.card-page .sneaker-content .right .price-line .buy:active {
+  -webkit-transform: scale(1.01);
+      -ms-transform: scale(1.01);
+          transform: scale(1.01);
   -webkit-transition: 100ms;
   -o-transition: 100ms;
   transition: 100ms;
