--- a/client/src/components/routes/styles.css
+++ b/client/src/components/routes/styles.css
@@ -163,8 +163,8 @@ footer .join h2 {
 }
 
 .left {
-  width: 25vw;
-  height: 100vh;
+  width: 20%;
+  height: 100%;
 }
 .left .links {
   display: -webkit-box;
@@ -178,7 +178,7 @@ footer .join h2 {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  height: 25vh;
+  height: 300px;
 }
 .left .links .avatar {
   width: 50px;
@@ -214,7 +214,7 @@ footer .join h2 {
 }
 .left .links span {
   border-top: 2px solid #44444c;
-  width: 80%;
+  width: 200px;
   opacity: 0.2;
 }
 .left .links button {
