--- a/client/src/components/routes/styles.scss
+++ b/client/src/components/routes/styles.scss
@@ -159,15 +159,15 @@ footer {
 }
 
 .left {
-  width: 25vw;
-  height: 100vh;
+  width: 20%;
+  height: 100%;
 
   .links {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 25vh;
+    height: 300px;
 
     .avatar {
       width: 50px;
@@ -201,7 +201,7 @@ footer {
 
     span {
       border-top: 2px solid $secondary;
-      width: 80%;
+      width: 200px;
       opacity: 0.2;
     }
 
