--- a/client/src/components/routes/styles.css
+++ b/client/src/components/routes/styles.css
@@ -148,7 +148,7 @@ footer .join h2 {
   display: flex;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
-          justify-content: start;
+          justify-content: flex-start;
 }
 .bottom .links h3 {
   font-size: 20px;
