--- a/client/src/components/routes/styles.scss
+++ b/client/src/components/routes/styles.scss
@@ -140,7 +140,7 @@ footer {
 
   .links {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 
     h3 {
       font-size: 20px;
