--- a/client/src/pages/Products/styles.css
+++ b/client/src/pages/Products/styles.css
@@ -212,15 +212,15 @@
 .card-page .sneaker-content .right .description {
   padding-top: 30px;
 }
-.card-page .sneaker-content .right .description .text {
-  border-bottom: 1px solid #8c8c8c;
-  font-size: 23px;
-  line-height: 34px;
-  padding-bottom: 30px;
+.card-page .sneaker-content .right .description ul {
+  list-style: square inside;
 }
-.card-page .sneaker-content .right .description b {
-  font-size: 30px;
+.card-page .sneaker-content .right .description ul li {
+  padding: 12px 0 3px 0;
 }
-.card-page .sneaker-content .right .description .materials {
+.card-page .sneaker-content .right .description ul li::marker {
+  color: #8c8c8c;
+}
+.card-page .sneaker-content .right .description h2 {
   font-size: 20px;
 }
