--- a/client/src/pages/Products/styles.scss
+++ b/client/src/pages/Products/styles.scss
@@ -176,18 +176,19 @@
       .description {
         padding-top: 30px;
 
-        .text {
-          border-bottom: 1px solid $gray;
-          font-size: 23px;
-          line-height: 34px;
-          padding-bottom: 30px;
+        ul {
+          list-style: square inside;
+
+          li {
+            padding: 12px 0 3px 0;
+
+            &::marker {
+              color: $gray;
+            }
+          }
         }
 
-        b {
-          font-size: 30px;
-        }
-
-        .materials {
+        h2 {
           font-size: 20px;
         }
       }
