--- a/client/src/Styles/_global-variables.scss
+++ b/client/src/Styles/_global-variables.scss
@@ -12,3 +12,5 @@ $cards_box_shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
   rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 $account_box_shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
   rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+$order_box_shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px,
+  rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
