--- a/client/src/pages/Account/styles.scss
+++ b/client/src/pages/Account/styles.scss
@@ -21,20 +21,47 @@
   @include account-container();
   min-height: 65vh;
 
+  .no-orders {
+    width: 30%;
+    height: 0%;
+    padding: 25px;
+    border: 2px solid $primary;
+    background-color: $white;
+  }
+
   .orders-block {
     width: 70%;
 
-    .orders {
-      display: flex;
-      align-items: center;
-      width: 50vw;
-      height: 10vh;
-      border: 2px solid $primary;
-      background-color: $white;
+    .orders-wrapper {
+      box-shadow: $order_box_shadow;
+      width: 100%;
+      height: 30%;
+      padding: 20px;
+      margin-bottom: 1em;
 
-      ul {
-        list-style: none;
-        margin: 0 4%;
+      h1 {
+        opacity: 0.6;
+      }
+
+      .images {
+        display: flex;
+        justify-content: space-evenly;
+        height: 35%;
+
+        img {
+          width: 10%;
+          height: 100%;
+        }
+      }
+
+      .names {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+
+        p {
+          opacity: 0.6;
+        }
       }
     }
   }
