--- a/client/src/components/routes/styles.scss
+++ b/client/src/components/routes/styles.scss
@@ -6,12 +6,11 @@
 }
 
 nav {
-  margin: 0;
-  background-color: $white;
-  width: 100%;
-  height: 80px;
-  border-bottom: 0.75px solid $gray;
+  width: 100vw;
+  height: 10vh;
   display: flex;
+  border-bottom: 0.75px solid $gray;
+  background-color: $white;
 
   a {
     width: 17.5%;
@@ -28,16 +27,29 @@ nav {
     &:first-of-type {
       width: 20%;
       border-right: 0.75px solid $gray;
+
+      @media screen and (width < 700px) {
+        img {
+          transition: 200ms ease;
+          width: 10vw;
+        }
+      }
     }
 
     p {
-      font-size: 20px;
+      font-size: 1.5vw;
       color: $primary;
       position: relative;
+      transition: 200ms ease;
+
+      @media screen and (width < 700px) {
+        transition: 200ms ease;
+        font-size: 3vw;
+      }
 
       &:before {
-        position: absolute;
         content: "";
+        position: absolute;
         width: 0%;
         height: 1px;
         border-bottom: 2px solid $primary;
@@ -66,12 +78,17 @@ nav {
       position: absolute;
       background-color: rgb(68, 68, 76, 0.6);
       color: $gray;
+      transition: 200ms ease;
     }
   }
 
   .icon {
-    width: 30px;
-    height: 30px;
+    width: 2vw;
+
+    @media screen and (width < 700px) {
+      transition: 200ms ease;
+      width: 4vw;
+    }
   }
 
   .logo {
