--- a/client/src/pages/Category/styles.scss
+++ b/client/src/pages/Category/styles.scss
@@ -1,13 +1,12 @@
 @import "../../Styles/global-variables";
 
 .humans-container {
-  width: 100%;
+  width: 100vw;
   height: auto;
 
   .head {
     height: 100px;
     display: flex;
-
     align-items: center;
     border-bottom: 2px solid $primary;
 
